--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
+  "homepage": "http://cryptotrading.io",
   "dependencies": {
     "ajv": "^6.5.5",
     "axios": "^0.18.0",
