Added LTC support

--- a/frontend/src/config/config.json
+++ b/frontend/src/config/config.json
@@ -5,7 +5,12 @@
   "coins": [
     "BTC",
     "ETC",
+    "XRP",
+    "LTC",
+    "BCH",
     "EOS",
+    "BNB",
+    "XLM",
     "ADA",
     "TRX"
   ]
