--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "ajv": "^6.5.5",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "chartist": "^0.11.0",
     "concurrently": "^4.1.0",
     "date-fns": "^1.29.0",
     "lodash": "latest",
