--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
+    "classnames": "latest",
     "concurrently": "^4.1.0",
     "date-fns": "^1.29.0",
     "lodash": "latest",
@@ -22,11 +23,15 @@
     "react-bootstrap-table": "^4.1.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
+    "react-notification-system": "^0.2.17",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
+    "react-select": "^2.4.3",
+    "react-switch": "^4.1.0",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "sweetalert-react": "^0.4.11"
