--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,14 @@
     "react-bootstrap-table": "^4.1.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
+    "react-ios-switch": "^0.1.19",
     "react-notification-system": "^0.2.17",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "react-select": "^2.4.3",
     "react-switch": "^4.1.0",
+    "react-toggle": "^4.0.2",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
