Added Two-Factor Authentication

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "^3.12",
       "ext-curl": "*",
       "ext-pdo": "*",
-      "ext-json": "*"
+      "ext-json": "*",
+        "sonata-project/google-authenticator": "^2.2"
     }
 }
