--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "ajv": "^6.5.5",
     "axios": "^0.18.0",
+    "bootbox": "^5.1.2",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
     "classnames": "latest",
@@ -19,6 +21,7 @@
     "radium": "^0.25.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.31.2",
+    "react-bootstrap-prompt": "^1.0.1",
     "react-bootstrap-sweetalert": "^4.0.0",
     "react-bootstrap-table": "^4.1.0",
     "react-chartjs-2": "^2.7.4",
