--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,10 @@
   "dependencies": {
     "ajv": "^6.5.5",
     "axios": "^0.18.0",
-    "bootbox": "^5.1.2",
-    "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "chartist": "^0.11.0",
     "classnames": "latest",
     "concurrently": "^4.1.0",
-    "date-fns": "^1.29.0",
     "lodash": "latest",
     "moment": "latest",
     "pe7-icon": "^1.0.4",
@@ -21,25 +18,15 @@
     "radium": "^0.25.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.31.2",
-    "react-bootstrap-prompt": "^1.0.1",
-    "react-bootstrap-sweetalert": "^4.0.0",
-    "react-bootstrap-table": "^4.1.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.2",
     "react-ios-switch": "^0.1.19",
-    "react-notification-system": "^0.2.17",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
-    "react-select": "^2.4.3",
-    "react-switch": "^4.1.0",
-    "react-toggle": "^4.0.2",
-    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0",
-    "sweetalert-react": "^0.4.11"
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
